crates/macro/ui-tests/missing-catch.stderr
error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: FromWasmAbi` is not satisfied
  --> $DIR/missing-catch.rs:6:9
   |
6  |     pub fn foo() -> Result<JsValue, JsValue>;
   |            ^^^ the trait `FromWasmAbi` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
   |
  ::: $WORKSPACE/src/convert/traits.rs
   |
   | pub trait FromWasmAbi: WasmDescribe {
   | ----------------------------------- required by this bound in `FromWasmAbi`
